<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    android:padding="@dimen/spacing_large"
    tools:context=".Register">

    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        style="@style/PageTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textViewRegisterName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegister"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextRegisterName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_height_edit_text"
            android:inputType="text"
            android:hint="@string/name"
            style="@style/TextInputEditText"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textViewMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegisterName"
        >
        <com.santalu.maskara.widget.MaskEditText
            android:id="@+id/editTextMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_height_edit_text"
            android:inputType="number"
            android:hint="@string/mobile_number"
            android:maxLength="17"
            app:mask="+___(__)___-__-__"
            style="@style/TextInputEditText"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textViewRegisterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/textViewMobileNumber"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextRegisterEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_height_edit_text"
            android:inputType="textEmailAddress"
            android:hint="@string/your_email"
            style="@style/TextInputEditText"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textViewRegisterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegisterEmail"
        android:layout_marginTop="@dimen/spacing_normal"
        style="@style/TextInputPasswordLayoutToggle"
        >
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextRegisterPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fragment_height_edit_text"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:paddingEnd="@dimen/spacing_huge"
        android:paddingStart="@dimen/spacing_large"
        style="@style/TextInputEditText"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        style="@style/TextViewClickable"
        android:layout_marginBottom="@dimen/spacing_small"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttonToLogin"
        />
    <Button
        android:id="@+id/buttonToLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingBottom="@dimen/spacing_large"
        android:paddingTop="@dimen/spacing_large"
        style="@style/Button"
        />


</androidx.constraintlayout.widget.ConstraintLayout>