<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    android:padding="@dimen/spacing_large"
    tools:context=".ResetPassword">

    <TextView
        android:id="@+id/textViewResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/dark_gray"
        android:textColor="@color/white"
        android:textSize="@dimen/text_larger"
        android:text="@string/reset_password"
        android:fontFamily="sans-serif-thin"
        android:layout_marginTop="@dimen/spacing_huge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textViewResetPasswordEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/textViewResetPassword"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextResetPasswordEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_height_edit_text"
            android:background="@color/gray_green"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:hint="@string/your_email"
            android:textSize="@dimen/text_small"
            android:fontFamily="sans-serif-thin"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textViewResetPasswordPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/textViewResetPasswordEmail"
        android:layout_marginTop="@dimen/spacing_normal"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextResetPasswordPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_height_edit_text"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:hint="@string/password"
            android:textSize="@dimen/text_small"
            android:fontFamily="sans-serif-thin"
            android:background="@color/gray_green"
            android:paddingEnd="@dimen/spacing_huge"
            android:paddingStart="@dimen/spacing_large"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textViewResetPasswordConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/textViewResetPasswordPassword"
        android:layout_marginTop="@dimen/spacing_normal"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextResetPasswordConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_height_edit_text"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:hint="@string/confirm_password"
            android:textSize="@dimen/text_small"
            android:fontFamily="sans-serif-thin"
            android:background="@color/gray_green"
            android:paddingEnd="@dimen/spacing_huge"
            android:paddingStart="@dimen/spacing_large"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/dont_have_an_account"
        android:textColor="@color/green"
        android:textSize="@dimen/text_normal"
        android:textStyle="bold"
        android:fontFamily="sans-serif-thin"
        android:layout_marginBottom="@dimen/spacing_small"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttonToLogin"
        android:focusable="true" />
    <Button
        android:id="@+id/buttonToLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_large"
        android:text="@string/reset_password"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingBottom="@dimen/spacing_large"
        android:paddingTop="@dimen/spacing_large"
        android:textColor="@color/white"
        android:backgroundTint="@color/green"
        />

</androidx.constraintlayout.widget.ConstraintLayout>